# pkg-kde-tools.ppa

./: CMakeLists.txt  dh_movelibkdeinit  dh_sameversiondep  dh_sodeps  perl-profiler.pl  pkgkde-debs2symbols  pkgkde-gensymbols  pkgkde-getbuildlogs  pkgkde-git  pkgkde-mark-private-symbols  pkgkde-mark-qt5-private-symbols  pkgkde-override-sc-dev-latest  pkgkde-symbolshelper  pkgkde-vcs  run-local
cmake/: DebianABIManager.cmake  README.DebianABIManager  debabi_verscript.cmake  debcontrol2cmake.pl
datalib/: kde4_flags  kf5_flags  shell_common
debian/: changelog  control  copyright  links  pkg-kde-tools.install  rules
dlrestrictions/: CMakeLists.txt  DLRestrictionsConfig.cmake  dlrestrictions-symbol.c.cmake  dlrestrictions.c  dlrestrictions.h
kubuntu/lib/: desktop-template-list
kubuntu/lib/libexec/: createdesktopcontext.pl  extract-messages.sh  extract-xml.sh  finddesktopfiles  msgsplit
makefiles/1/: variables.mk
makefiles/1/cdbs/: kde.mk  symbolshelper.mk
man1/: pkgkde-gensymbols.1  pkgkde-git.1  pkgkde-mark-private-symbols.1  pkgkde-mark-qt5-private-symbols.1  pkgkde-symbolshelper.1  pkgkde-vcs.1
perllib/Debian/: PkgKde.pm
perllib/Debian/Debhelper/Buildsystem/: kde.pm  kf5.pm
perllib/Debian/Debhelper/Sequence/: kde.pm  kf5.pm  pkgkde_symbolshelper.pm  sodeps.pm
perllib/Debian/PkgKde/SymbolsHelper/: CompileTest.pm  Patching.pm  String.pm  Subst.pm  Substs.pm  Symbol.pm  SymbolFile.pm  SymbolFileCollection.pm
perllib/Debian/PkgKde/SymbolsHelper/Substs/: TypeSubst.pm
qt-kde-team/: README
qt-kde-team/1/: debian-qt-kde.mk  library-packages.mk  policy.mk
qt-kde-team/1/policy/: unstable.mk
qt-kde-team/2/: commands  debian-qt-kde.mk  dhmk.mk  l10n-packages.mk  library-packages.mk  list-missing.mk
qt-kde-team/2/policy/: unstable.mk
qt-kde-team/3/: README  debian-qt-kde.mk  dhmk.mk  dhmk.pl  lintian.mk  list-missing.mk  policy.mk
t/: CMakeLists.txt  perl_syntax_check.t
t/dlrestrictions/: CMakeLists.txt  testdlr.h  testdlr_deeplib1.c  testdlr_deeplib2.c  testdlr_lib1.c  testdlr_lib2.c  testdlr_loader.c  testdlr_plugin.c
vcslib/: git.sh
